k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: games-api
  namespace: games
  labels:
    app: games-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: games-api
  template:
    metadata:
      labels:
        app: games-api
    spec:
      containers:
      - name: games-api
        image: alexandresorza/fcg-games-api:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets-store"
          readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "fcg-keyvault-secrets"
---
apiVersion: v1
kind: Service
metadata:
  name: games-api-service
  namespace: games
spec:
  selector:
    app: games-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
