k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: games-api
  namespace: games
  labels:
    app: games-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: games-api
